# GreedySnakeBattle

./: CMakeLists.txt  Doxyfile.txt  LICENSE.txt  README.md
cmake/: cmake_uninstall.cmake.in
manual/: GreedySnakeBattle.man
pre_generated_API_documents/html/: GSnakeBGEI.html  GameAllRunningData_8h.html  GameAllRunningData_8h.js  GameAllRunningData_8h_source.html  GameConfig_8h.html  GameConfig_8h.js  GameConfig_8h_source.html  GreedySnakeBattleGameExternalInterface_8c.html  GreedySnakeBattleGameExternalInterface_8c.js  GreedySnakeBattleGameExternalInterface_8c_source.html  GreedySnakeBattleGameExternalInterface_8h.html  GreedySnakeBattleGameExternalInterface_8h.js  GreedySnakeBattleGameExternalInterface_8h_source.html  LICENSE_8txt.html  OffLineMode.html  OfflineModeIntroduction_8c.html  OfflineModeIntroduction_8c_source.html  Point_8h.html  Point_8h.js  Point_8h_source.html  README_8md.html  annotated.html  annotated_dup.js  bug.html  classes.html  dir_63890a2368bb4dde3f4d7c51afb738d4.html  dir_63890a2368bb4dde3f4d7c51afb738d4.js  dir_63890a2368bb4dde3f4d7c51afb738d4_dep.map  dir_63890a2368bb4dde3f4d7c51afb738d4_dep.md5  dir_65f2c86f6a1886565933ecad12b7a3f2.html  dir_65f2c86f6a1886565933ecad12b7a3f2.js  dir_65f2c86f6a1886565933ecad12b7a3f2_dep.map  dir_65f2c86f6a1886565933ecad12b7a3f2_dep.md5  dir_71829393220f721d5a338b8d46998931.html  dir_71829393220f721d5a338b8d46998931.js  dir_71829393220f721d5a338b8d46998931_dep.map  dir_71829393220f721d5a338b8d46998931_dep.md5  dir_73dd697816aadc5ba53a5a116624e5ba.html  dir_73dd697816aadc5ba53a5a116624e5ba.js  dir_73dd697816aadc5ba53a5a116624e5ba_dep.map  (+153 more)
pre_generated_API_documents/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  all_34.js  all_35.js  (+84 more)
signatures/: GameAllRunningData.h.asc  GameConfig.h.asc  GreedySnakeBattleGameExternalInterface.c.asc  GreedySnakeBattleGameExternalInterface.h.asc  LICENSE.txt.asc  OfflineModeIntroduction.c.asc  Point.h.asc  README.md.asc  exitApp.c.asc  exitApp.h.asc  food.c.asc  food.h.asc  gameApplicationStartupRelated.c.asc  gameApplicationStartupRelated.h.asc  gameMainLogic.c.asc  gameMainLogic.h.asc  gameSetConfiguration.c.asc  gameSetConfiguration.h.asc  gameStartupRelated.c.asc  gameStartupRelated.h.asc  globalVariable.c.asc  globalVariable.h.asc  main.c.asc  obstacleSnake.c.asc  obstacleSnake.h.asc  painting.c.asc  painting.h.asc  signalCapture.c.asc  signalCapture.h.asc  snakeFullCompat.c.asc  snakeFullCompat.h.asc  standardIO.c.asc  standardIO.h.asc  terminal.c.asc  terminal.h.asc  typedef.h.asc  userInterfaceBeforeGameStarts.c.asc  userInterfaceBeforeGameStarts.h.asc  userSnake.c.asc  userSnake.h.asc  (+2 more)
source/: GreedySnakeBattleGameExternalInterface.c  OfflineModeIntroduction.c  exitApp.c  food.c  gameApplicationStartupRelated.c  gameMainLogic.c  gameSetConfiguration.c  gameStartupRelated.c  globalVariable.c  logFileWrite.c  main.c  obstacleSnake.c  painting.c  signalCapture.c  snakeFullCompat.c  standardIO.c  terminal.c  userInterfaceBeforeGameStarts.c  userSnake.c  wall.c
source/GSnakeBInclude/: GreedySnakeBattleGameExternalInterface.h
source/GSnakeBInclude/Functions/: exitApp.h  food.h  gameApplicationStartupRelated.h  gameSetConfiguration.h  obstacleSnake.h  painting.h  signalCapture.h  standardIO.h  terminal.h  userInterfaceBeforeGameStarts.h  userSnake.h  wall.h
source/GSnakeBInclude/GlobalVariable/: globalVariable.h
source/GSnakeBInclude/LogFile/: logFileWrite.h
source/GSnakeBInclude/Struct/: GameAllRunningData.h
source/Include/: GreedySnakeBattleGameExternalInterface.h
source/Include/Compat/: snakeFullCompat.h
source/Include/Functions/: gameMainLogic.h  gameStartupRelated.h  painting.h  signalCapture.h  standardIO.h  terminal.h  userInterfaceBeforeGameStarts.h  userSnake.h
source/Include/GlobalVariable/: globalVariable.h
source/Include/Struct/: GameAllRunningData.h  GameConfig.h  Point.h
source/Include/TypeDefine/: typedef.h
